--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.DS_Store
-.sublime-workspace
-.aux
-.fdb_latexmk
-.fls
-.log
-.out
-.pdf
-.synctex.gz
-.toc
+*.DS_Store
+*.sublime-workspace
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.pdf
+*.synctex.gz
+*.toc
